# traffic-lights

./: .gitmodules  Makefile.rules  README.md  build.sh  setup.sh
back/: Browser.go  Claim.go  ClaimBase.go  Command.go  Crossing.go  Crossing_test.go  DaytimeClaim.go  Direction.go  Direction_test.go  Http.go  Lane.go  Pole.go  Report.go  User.go  Wire.go  WireSpi.go  go.mod  main.go
doc/: overview.graphml
front/: index.html
pico/dockerfiles/armgcc-20.04/: Dockerfile
pico/schemas/: traffic_lights.drawio
pico/src/: CMakeLists.txt  main.c
pico/src/car_sensor/: CMakeLists.txt  car_sensor.c
pico/src/car_sensor/include/: car_sensor.h
pico/src/clock/: CMakeLists.txt
pico/src/clock/include/: clock.h
pico/src/data_comm/: CMakeLists.txt  data_comm.c
pico/src/data_comm/include/: data_comm.h
pico/src/data_decoder/: CMakeLists.txt  data_decoder.c
pico/src/data_decoder/include/: data_decoder.h
pico/src/data_encoder/: CMakeLists.txt  data_encoder.c
pico/src/data_encoder/include/: data_encoder.h
pico/src/lane/: CMakeLists.txt  lane.c  three_light_lane.c
pico/src/lane/include/: lane.h  three_light_lane.h
pico/src/lane/interface/: lane.h
pico/src/lane_group/: CMakeLists.txt  lane_group.c
pico/src/lane_group/include/: lane_group.h
pico/src/messages/: CMakeLists.txt  messages.h
pico/src/testing/fake_master/: CMakeLists.txt  fake_master.c  fake_master_debug_mode.c
pico/src/testing/spi/: CMakeLists.txt  spi_test-master.c  spi_test-masterslave.c  spi_test-slave.c
pico/src/traffic_light_group/: CMakeLists.txt  traffic_light_group.c
pico/src/traffic_light_group/include/: traffic_light_group.h
static/: index.html
