add_executable(fake_master fake_master.c)
target_link_libraries(fake_master pico_stdlib hardware_spi messages clock)
pico_add_uf2_output(fake_master)
pico_add_hex_output(fake_master)
pico_enable_stdio_usb(fake_master 1)
pico_enable_stdio_uart(fake_master 0)

add_executable(fake_master_debug_mode fake_master_debug_mode.c)
target_link_libraries(fake_master_debug_mode pico_stdlib hardware_spi messages clock)
pico_add_uf2_output(fake_master_debug_mode)
pico_add_hex_output(fake_master_debug_mode)
pico_enable_stdio_usb(fake_master_debug_mode 1)
pico_enable_stdio_uart(fake_master_debug_mode 0)
